# Smart-Pet-Dashboard

./: .env.example  .gitignore  AuthenticationManager.h  CMakeLists.txt  CMakeLists_REMOTE_405.txt  Database.h  Device.cpp  Device.h  LICENSE  LogEntry.h  PPDog.cpp  PPDog.h  PPFish.h  PPwindow.cpp  PPwindow.h  PPwindow.ui  PetOwner.cpp  PetOwner.h  PetProfile.cpp  PetProfile.h  PetSitter.h  QAUser.cpp  QAUser.h  SmartFeeder.cpp  SmartFeeder.h  SmartLight.cpp  SmartLight.h  SystemAdmin.h  SystemEntity.h  User.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ppcat.ui  ppreptile.ui  resources.qrc
Database/: SmartPet_Database_SetUp.sql
Headers/: AuthenticationManager.h  Database.h  Device.h  EnvLoader.h  PetOwner.h  PetProfile.h  PetProfileManager.h  SmartFeeder.h  SmartLight.h  SystemAdmin.h  User.h  UserProfile.h  UserProfileManager.h  globals.h
QTCreator/: AuthenticationManager.cpp  AuthenticationManager.h  CMakeLists.txt  CMakeLists_BACKUP_405.txt  CMakeLists_LOCAL_405.txt  CreateAccount.cpp  CreateAccount.h  Database.cpp  Database.h  Login.cpp  Login.h  PPCat.cpp  PPCat.h  PPDog.cpp  PPDog.h  PPFish.cpp  PPFish.h  PPReptile.cpp  PPReptile.h  PPwindow.cpp  PPwindow.h  PPwindow.ui  PetOwner.cpp  PetOwner.h  PetProfile.cpp  PetProfile.h  PetProfileManager.cpp  PetProfileManager.h  QAUser.cpp  QAUser.h  SmartLight.cpp  SmartLight.h  SystemAdmin.cpp  SystemAdmin.h  User.cpp  User.h  UserProfile.cpp  UserProfile.h  UserProfileManager.cpp  UserProfileManager.h  (+11 more)
QTCreator/Headers/: PetProfile.h  User.h
QTCreator/QtHeaders/: Device.h  PPCat.h  PPDog.h  PetOwner.h  SmartFeeder.h  globals.h
QTCreator/QtSources/: PPCat.cpp  PPDog.cpp  PPwindow.cpp  SystemAdmin.cpp
QTCreator/Sources/: SmartLight.cpp
QtHeaders/: globals.h  user.cpp
QtSources/: SmartFeeder.cpp  SmartLight.cpp  User.cpp  globals.cpp
Source Files/: AuthenticationManager.cpp  Database.cpp  Device.cpp  EnvLoader.cpp  PetOwner.cpp  PetProfile.cpp  PetProfileManager.cpp  QAUser.cpp  SmartFeeder.cpp  SmartLight.cpp  User.cpp  UserProfile.cpp  UserProfileManager.cpp  globals.cpp  main.cpp  mainwindow.cpp
